<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
        <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_name"/>
        <Button
                android:id="@+id/greetingButton"
                android:onClick="sayHi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/say_hi"/>
    </LinearLayout>
    <TextView
            android:id="@+id/greeting"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="0dp"
            android:layout_weight="4"/>
</LinearLayout>